--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'oauth.signpost:signpost-core:1.2.1.2'
+    compile 'com.squareup.okhttp3:okhttp:3.1.2'
+    compile 'se.akerfeldt:okhttp-signpost:1.1.0'
+    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
+
 }
