--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'se.akerfeldt:okhttp-signpost:1.1.0'
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
-
+    compile 'com.android.support:recyclerview-v7:+'
 }
