--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,12 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
+    packagingOptions {
+        exclude 'META-INF/NOTICE' // will not include NOTICE file
+        exclude 'META-INF/LICENSE' // will not include LICENSE file
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -35,4 +41,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.firebase:firebase-client-android:2.3.1'
 }
+
