--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,15 @@ android {
 
 apply plugin: 'com.neenbedankt.android-apt'
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
-    compile 'org.parceler:parceler-api:1.0.4'
     apt 'org.parceler:parceler:1.0.4'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile 'org.parceler:parceler-api:1.0.4'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'oauth.signpost:signpost-core:1.2.1.2'
@@ -42,5 +46,8 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.firebase:firebase-client-android:2.3.1'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
+
+
 
